--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,5 @@
-<h2> Sign Up </h2>
+<section class="container bg-dark">
+<h1 class="text-center my-5"> Sign Up </h1>
 
 {{#if errorMessage}}
 <p class="error-message">
@@ -6,28 +7,26 @@
 </p>
 {{/if}}
 
-<form action="/signup" method="post">
-    <div>
+<form action="/auth/signup" class="text-center" method="post">
+    <div class="form-group my-3">
         <label for="name-input"> Name </label>
-        <input type="text" name="name" id="name-input" placeholder="e.g., Diana Prince">
+        <input type="text" class="form-control col-lg-4 mx-auto" name="name" id="name-input" placeholder="e.g., Diana Prince">
     </div>
-
-    <div>
+    <div class="form-group my-3">
         <label for="email-input"> Email </label>
-        <input type="email" name="email" id="email-input" placeholder="e.g., diana@themyscira.agency">
+        <input type="email"  class="form-control col-lg-4 mx-auto" name="email" id="email-input" placeholder="e.g., diana@themyscira.agency">
     </div>
-
-    <div>
+    <div class="form-group my-3">
         <label for="password-input"> Password </label>
-        <input type="password" name="password" id="password-input" placeholder="e.g., ••••••••••••">
+        <input type="password" class="form-control col-lg-4 mx-auto" name="password" id="password-input" placeholder="e.g., ••••••••••••">
     </div>
-
-    <button> Create New Account </button>
-</form>
+    <button class="btn btn-secondary my-3"> Create New Account </button>
 
 <p>
     Already have an account?
-    <a href="/login">
+    <a href="/auth/login">
         Log in.
     </a>
 </p>
+</form>
+</section>
